--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,5 +58,10 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false
+  "C_Cpp_Runner.msvcSecureNoWarnings": false,
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#273119",
+    "titleBar.activeBackground": "#364423",
+    "titleBar.activeForeground": "#FAFCF8"
+  }
 }
